<?xml version="1.0" encoding="utf-8"?>

<!--~
  ~ JBoss, Home of Professional Open Source
  ~ Copyright Red Hat, Inc., and individual contributors
  ~ by the @authors tag. See the copyright.txt in the distribution for a
  ~ full listing of individual contributors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10sp">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Title"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabel"
                android:text="@string/title"/>

        <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabel"
                android:text="@string/date"/>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">


            <EditText
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="yyyy-mm-dd"
                    android:inputType="date"/>

            <ImageView
                    android:id="@+id/buttonCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_calendar"/>

        </LinearLayout>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormLabel"
                android:text="@string/description"/>

        <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15sp">

            <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/add"/>

            <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/cancel"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>